--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -103,8 +103,10 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
-    <script src="../js/cep.js"></script>
+    
+    <script src="../js/cadastro.js"></script>
 
 </body>
 
