div para bloquear duplo click no submit

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -96,7 +96,23 @@
 
             <hr>
 
-            <input type="submit" value="Enviar Cadastro">
+            <div id="containerEnviar">
+
+                <input type="submit" name="send" id="send" value="Enviar Cadastro">
+
+                <div id="blockEnviar"></div>
+
+            </div>
+
+            <!-- <input type="submit" value="Enviar Cadastro"> -->
+
+            <!-- <form id="formID">
+                <input type="text" required />
+                <div id="containerEnviar">    
+                  <input type="submit" class="formButton" name="send" id="send" value="Enviar">
+                  <div id="blockEnviar"></div>
+                </div>
+            </form> -->
 
         </form>
 
@@ -105,7 +121,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
-    
+
     <script src="../js/cadastro.js"></script>
 
 </body>
