adicionando a classe ao form

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -22,7 +22,7 @@
 
         <hr>
 
-        <form action="envio.php" method="post">
+        <form action="envio.php" method="post" id="formID">
 
             <p>Nome Completo:</p>
             <input type="text" name="nome" required>
