Alteração no corpo do email e campo (bairro) no form

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -42,7 +42,7 @@
             <p>Você tem restrições no nome? (SPC/SERASA/Protesto)</p>
 
             <select name="restricao" required>
-                <option value="" disabled selected>--- Selecione uma opção ---</option>
+                <option value="" disabled selected>---- Selecione uma opção ----</option>
                 <option value="Limpo">Tenho nome limpo no SPC, SERASA e Cartórios</option>
                 <option value="Sujo">Tenho restrição</option>
             </select>
@@ -86,7 +86,7 @@
             <input type="text" name="ponto_referencia"><br>
 
             <p>Bairro:</p>
-            <input type="text" id="txtBairro" name="bairro" required readonly><br>
+            <input type="text" id="txtBairro" name="bairro" required><br>
 
             <p>Cidade:</p>
             <input type="text" id="txtCity" name="cidade" required readonly><br>
