Adição de metadescrição e otimização de desempenho

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Construa seu império financeiro, uma peça brilhante de cada vez. Seja dona do seu negócio ao se tornar uma revendedora Rabi. Apresentamos a você a oportunidade de lucrar revendendo semijoias através de consignação.">
     <link rel="shortcut icon" href="./assets/logo/icon.ico" type="image/x-icon">
     <title>Rabi Consignados - Seja Uma Revendedora</title>
     <link rel="stylesheet" href="./css/home.css">
