Melhorias de design e desempenho

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/segmentosegmento.png" alt="segmento" />
+                                    <img src="./assets/cards/card_1.jpg" alt="8 anos no mercado" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -178,7 +178,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/premios.png" alt="premios" />
+                                    <img src="./assets/cards/card_4.jpg" alt="investimento zero" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -186,7 +186,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/otimo lucro.png" alt="otimo lucro" />
+                                    <img src="./assets/cards/card_6.jpg" alt="segmento" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -194,8 +194,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/investimento.png" alt="investimento" />
-                                    
+                                    <img src="./assets/cards/card_2.jpg" alt="comissões de 40%" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -203,8 +202,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/custo mensal.png" alt="custo mensal" />
-                                    
+                                    <img src="./assets/cards/card_3.jpg" alt="custo fixo zero" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -212,8 +210,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/comissão.png" alt="comissao" />
-
+                                    <img src="./assets/cards/card_5.jpg" alt="retorno de investimento" />
                                 </figure>
 
                             </div> <!-- end swiper-slide -->
@@ -228,31 +225,31 @@
 
             </section>
 
-            <section id="beneficios_mobile">
+            <section id="beneficios_desktop">
 
                 <div class="cards">
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/segmentosegmento.png" alt="">
+                        <img src="./assets/cards/card_6.jpg" alt="cards">
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/premios.png" alt="">
+                        <img src="./assets/cards/card_4.jpg" alt="cards">
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/otimo lucro.png" alt="">
+                        <img src="./assets/cards/card_2.jpg" alt="cards">
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/investimento.png" alt="">
+                        <img src="./assets/cards/card_1.jpg" alt="cards">
 
                     </div>
 
@@ -262,23 +259,18 @@
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/custo mensal.png" alt="">
+                        <img src="./assets/cards/card_5.jpg" alt="cards">
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/comissão.png" alt="">
-
-                    </div>
-
-                    <div class="cards_beneficios">
-
-                        <img src="./assets/cards/anos no mercado.png" alt="">
+                        <img src="./assets/cards/card_3.jpg" alt="cards">
 
                     </div>
 
                 </div>
+
             </section>
 
             <div>
@@ -448,7 +440,7 @@
 
                 <h2>Conheça nossos produtos</h2>
 
-                <p>Nossas SEMIJOIAS são banhadas a ouro 18k com pedras cravejadas de zircônias.</p>
+                <p>Nossas SEMIJOIAS são banhadas a ouro 18k com pedras cravejadas de zircônias e tecnologia hipoalergênico, livre de níquel e cádmio.</p>
 
                 <p>O processo de fabricação das nossas semijoias é o mesmo de uma joia, com total qualidade e perfeição em acabamento e durabilidade.</p>
 
@@ -634,45 +626,77 @@
 
             <div class="duvidas">
 
-                <div class="cards">
+                <section>
 
                     <div class="duvidas-child">
 
-                        <p><span>1) Quais as condições para ser uma empreendedora?</span></p>
+                        <p><span>1) Quais as condições para ser uma revendedora?</span></p>
 
-                        <p>Você deve ser maior de idade, residir no Brasil, não possuir nenhuma anotação cadastral restritiva em seu CPF e ter o seu cadastro aprovado pelo Setor de Cadastro da</p>
+                        <p>Você deve ser maior de idade, residir no Brasil, não possuir nenhuma anotação cadastral restritiva em seu CPF e ter o seu cadastro aprovado pelo Setor de Cadastro Rabi SemiJoias.</p>
 
                     </div>
 
                     <div class="duvidas-child">
 
-                        <p><span>1) Quais as condições para ser uma empreendedora?</span></p>
+                        <p><span>2) Posso fazer o cadastro no nome do meu marido ou irmão?</span></p>
 
-                        <p>Você deve ser maior de idade, residir no Brasil, não possuir nenhuma anotação cadastral restritiva em seu CPF e ter o seu cadastro aprovado pelo Setor de Cadastro da</p>
-
-                    </div>
-
-                </div>
-
-                <div class="cards">
-
-                    <div class="duvidas-child">
-
-                        <p><span>1) Quais as condições para ser uma empreendedora?</span></p>
-
-                        <p>Você deve ser maior de idade, residir no Brasil, não possuir nenhuma anotação cadastral restritiva em seu CPF e ter o seu cadastro aprovado pelo Setor de Cadastro da</p>
+                        <p>Sim, não há impedimento para isso. No entanto, a pessoa responsável deverá ter o cadastro aprovado e assinará o Contrato de Consignação e todos os romaneios posteriores.</p>
 
                     </div>
 
                     <div class="duvidas-child">
 
-                        <p><span>1) Quais as condições para ser uma empreendedora?</span></p>
+                        <p><span>3) Posso ser uma revendedora Rabi Semijoias mesmo morando em outra cidade ou estado?</span></p>
 
-                        <p>Você deve ser maior de idade, residir no Brasil, não possuir nenhuma anotação cadastral restritiva em seu CPF e ter o seu cadastro aprovado pelo Setor de Cadastro da</p>
+                        <p>Sim. Trabalhamos com revendedoras de qualquer região do Brasil. Nas regiões que o reperesentante não atende. Os trâmites contratuais são realizados digitalmente e enviados pelos correios.</p>
 
                     </div>
 
-                </div>
+                    <div class="duvidas-child">
+
+                        <p><span>4) Como funciona o ciclo da consignação?</span></p>
+
+                        <p>O ciclo de consignação tem início a partir da data que recebe o mostruário até o endereço cadastrado. Exemplo: mostruário chegou, a partir do recebimento se estende de 35 a 40 dias corridos.</p>
+
+                    </div>
+
+                </section>
+
+                <section>
+
+                    <div class="duvidas-child">
+
+                        <p><span>5) Qual o valor de comissionamento?</span></p>
+
+                        <p>Trabalhamos com comissionamento de 30 a 40%.</p>
+
+                    </div>
+
+                    <div class="duvidas-child">
+
+                        <p><span>6) Não vendi todas as peças, o que faço?</span></p>
+
+                        <p>A consignação é renovada ou encerrada na data pré-agendada do acerto. Inicia a montagem de um novo mostruário e dá início a um novo ciclo de consignação. Lembrando que acerta somente o que vender!</p>
+
+                    </div>
+
+                    <div class="duvidas-child">
+
+                        <p><span>7) As peças também são vendidas por atacado?</span></p>
+
+                        <p>Sim, a RABI SEMIJOIAS trabalha com vendas no atacado, com condições especiais.</p>
+
+                    </div>
+
+                    <div class="duvidas-child">
+
+                        <p><span>8) Qual a política de garantia das peças?</span></p>
+
+                        <p>Oferecemos garantia de 12 meses nos banhos. Todas as peças acompanham um certificado de garantia e há um setor específico responsável por analisar e tratar todas as ocorrências. OBS: peças quebradas, danificadas ou arrebentadas não entra na garantia.</p>
+
+                    </div>
+
+                </section>
 
             </div>
 
