Atualizações de design

--- a/index.html
+++ b/index.html
@@ -415,10 +415,9 @@
 
                 <h2>Quem somos nós</h2>
 
-                <p>A Rabi Semi Joias é uma empresa situada em Minas Gerais,
-                com sede em Governador Valadares, e com portas abertas para todo o Brasil! Caso queira agendar uma visita em nossa loja, será um prazer recebê-la(o).</p>
+                <p>A Rabi Semijoias, uma empresa de Minas Gerais fundada em julho de 2015 e sediada em Governador Valadares, acolhe clientes de todo o Brasil, convidando-os a visitar sua loja física. Com um propósito claro de proporcionar semijoias exclusivas de alta qualidade, a marca busca iluminar a vida de revendedores e clientes, enxergando suas peças não apenas como acessórios, mas como expressões de estilo, personalidade e confiança.</p>
 
-                <p>Nosso objetivo é oferecer para revendedoras e clientes uma rotina mais radiante com produtos de alto padrão de qualidade que expressam valor e resultam em retorno lucrativo.</p>
+                <p>A empresa está em sintonia com as diversas necessidades do mercado, oferecendo peças sofisticadas e modernas que transcendem tendências temporárias, com uma coleção que abrange desde brincos sutis até peças religiosas, masculinas e infantis, celebrando a diversidade de expressão. A Rabi Semijoias se destaca como um local onde a elegância e a qualidade se unem em cada detalhe, convidando todos a se sentirem em casa.</p>
 
             </div>
 
@@ -440,7 +439,7 @@
 
                 <h2>Conheça nossos produtos</h2>
 
-                <p>Nossas SEMIJOIAS são banhadas a ouro 18k com pedras cravejadas de zircônias e tecnologia hipoalergênico, livre de níquel e cádmio.</p>
+                <p>Nossas semijoias são banhadas a Ouro 18k com pedras cravejadas de zircônias e tecnologia hipoalergênica, livre de níquel e cádmio.</p>
 
                 <p>O processo de fabricação das nossas semijoias é o mesmo de uma joia, com total qualidade e perfeição em acabamento e durabilidade.</p>
 
@@ -529,7 +528,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/depoimentos/dp1.webp" alt="depoimento">
+                                    <img src="./assets/depoimentos/dp1.svg" alt="depoimento">
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -537,7 +536,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/depoimentos/dp2.webp" alt="depoimento">
+                                    <img src="./assets/depoimentos/dp2.svg" alt="depoimento">
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -545,7 +544,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/depoimentos/dp3.webp" alt="depoimento">
+                                    <img src="./assets/depoimentos/dp3.svg" alt="depoimento">
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -553,7 +552,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/depoimentos/dp4.webp" alt="depoimento">
+                                    <img src="./assets/depoimentos/dp4.svg" alt="depoimento">
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -561,7 +560,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/depoimentos/dp5.webp" alt="depoimento">
+                                    <img src="./assets/depoimentos/dp5.svg" alt="depoimento">
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
