--- a/produtos.html
+++ b/produtos.html
@@ -70,11 +70,11 @@
 
             <div class="text_content_childs">
 
-                <p>Nossas SEMIJOIAS são banhadas a ouro 18k com pedras cravejadas de zircônias.</p>
+                <p>Nossas semijoias são banhadas a Ouro 18k com pedras cravejadas de zircônias e tecnologia hipoalergênica, livre de níquel e cádmio.</p>
 
                 <p>Nossas peças tem Certificado de Garantia de 12 meses no banho da peça, para que sejam realizados sem custo para o cliente final após análise pelo Setor responsável.</p>
     
-                <p>Trabalhamos com peças banhada a Prata e ouro 18k</p>
+                <p>Trabalhamos com peças banhada a Prata e Ouro 18k</p>
     
                 <p>Confira abaixo alguns modelos:</p>
 
