Atualizações no cadastro

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -69,7 +69,7 @@
 
             </div>
 
-            <p>Nome da Pessoa que Indicou:</p>
+            <p>Quem Indicou?</p>
             <input type="text" name="nomeIndicacao">
 
             <hr>
