melhoria de qualidade de fotos

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -92,10 +92,10 @@
             <input type="text" id="txtBairro" name="bairro" placeholder="Ex: Centro" required><br>
 
             <p>Cidade:</p>
-            <input type="text" id="txtCity" name="cidade" required readonly><br>
+            <input type="text" id="txtCity" name="cidade" required><br>
 
             <p>Estado:</p>
-            <input type="text" id="txtState" name="estado" required readonly><br>
+            <input type="text" id="txtState" name="estado" required><br>
 
             <hr>
 
