Melhorias de desempenho

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_1.jpg" alt="8 anos no mercado" />
+                                    <img src="./assets/cards/segmento.svg" alt="Segmento" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -178,7 +178,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_4.jpg" alt="investimento zero" />
+                                    <img src="./assets/cards/investimento.svg" alt="investimento zero" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -186,7 +186,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_6.jpg" alt="segmento" />
+                                    <img src="./assets/cards/comissão.svg" alt="Comissão de 40%" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -194,7 +194,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_2.jpg" alt="comissões de 40%" />
+                                    <img src="./assets/cards/otimoLucro.svg" alt="Ótimo Lucro" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -202,7 +202,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_3.jpg" alt="custo fixo zero" />
+                                    <img src="./assets/cards/custoMensal.svg" alt="custo fixo zero" />
                                 </figure>
 
                             </div>  <!-- end swiper-slide -->
@@ -210,7 +210,7 @@
                             <div class="swiper-slide">
 
                                 <figure>
-                                    <img src="./assets/cards/card_5.jpg" alt="retorno de investimento" />
+                                    <img src="./assets/cards/anosNoMercado.svg" alt="8 anos no mercado" />
                                 </figure>
 
                             </div> <!-- end swiper-slide -->
@@ -231,25 +231,25 @@
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_6.jpg" alt="cards">
+                        <img src="./assets/cards/segmento.svg" alt="Segmento" />
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_4.jpg" alt="cards">
+                        <img src="./assets/cards/investimento.svg" alt="investimento zero" />
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_2.jpg" alt="cards">
+                        <img src="./assets/cards/comissão.svg" alt="Comissão de 40%" />
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_1.jpg" alt="cards">
+                        <img src="./assets/cards/otimoLucro.svg" alt="Ótimo Lucro" />
 
                     </div>
 
@@ -259,14 +259,13 @@
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_5.jpg" alt="cards">
+                        <img src="./assets/cards/custoMensal.svg" alt="custo fixo zero" />
 
                     </div>
 
                     <div class="cards_beneficios">
 
-                        <img src="./assets/cards/card_3.jpg" alt="cards">
-
+                        <img src="./assets/cards/anosNoMercado.svg" alt="8 anos no mercado" />
                     </div>
 
                 </div>
@@ -423,7 +422,7 @@
 
             <div class="foto sede">
 
-                <img src="./assets/loja/loja_1.jpg" alt="Loja Rabi Semijoias">
+                <img src="./assets/loja/loja3.webp" alt="Loja Rabi Semijoias">
 
                 <p id="sede">Sede da Empresa</p>
 
@@ -517,63 +516,63 @@
 
             </div>
 
-            <section id="slider-6">
+                <section id="slider-6">
 
-                <div class="container wide">
+                    <div class="container wide">
 
-                    <div class="swiper" id="swiper-2">
+                        <div class="swiper" id="swiper-2">
 
-                        <div class="swiper-wrapper">
+                            <div class="swiper-wrapper">
 
-                            <div class="swiper-slide">
+                                <div class="swiper-slide">
 
-                                <figure>
-                                    <img src="./assets/depoimentos/dp1.svg" alt="depoimento">
-                                </figure>
+                                    <figure>
+                                        <img src="./assets/depoimentos/dp1.svg" alt="depoimento">
+                                    </figure>
 
-                            </div>  <!-- end swiper-slide -->
+                                </div>  <!-- end swiper-slide -->
 
-                            <div class="swiper-slide">
+                                <div class="swiper-slide">
 
-                                <figure>
-                                    <img src="./assets/depoimentos/dp2.svg" alt="depoimento">
-                                </figure>
+                                    <figure>
+                                        <img src="./assets/depoimentos/dp2.svg" alt="depoimento">
+                                    </figure>
 
-                            </div>  <!-- end swiper-slide -->
+                                </div>  <!-- end swiper-slide -->
 
-                            <div class="swiper-slide">
+                                <div class="swiper-slide">
 
-                                <figure>
-                                    <img src="./assets/depoimentos/dp3.svg" alt="depoimento">
-                                </figure>
+                                    <figure>
+                                        <img src="./assets/depoimentos/dp3.svg" alt="depoimento">
+                                    </figure>
 
-                            </div>  <!-- end swiper-slide -->
+                                </div>  <!-- end swiper-slide -->
 
-                            <div class="swiper-slide">
+                                <div class="swiper-slide">
 
-                                <figure>
-                                    <img src="./assets/depoimentos/dp4.svg" alt="depoimento">
-                                </figure>
+                                    <figure>
+                                        <img src="./assets/depoimentos/dp4.svg" alt="depoimento">
+                                    </figure>
 
-                            </div>  <!-- end swiper-slide -->
+                                </div>  <!-- end swiper-slide -->
 
-                            <div class="swiper-slide">
+                                <div class="swiper-slide">
 
-                                <figure>
-                                    <img src="./assets/depoimentos/dp5.svg" alt="depoimento">
-                                </figure>
+                                    <figure>
+                                        <img src="./assets/depoimentos/dp5.svg" alt="depoimento">
+                                    </figure>
 
-                            </div>  <!-- end swiper-slide -->
+                                </div>  <!-- end swiper-slide -->
 
-                        </div> <!-- end swiper-wrapper -->
-        
-                        <div class="swiper-custom-pagination"></div>
+                            </div> <!-- end swiper-wrapper -->
+            
+                            <div class="swiper-custom-pagination"></div>
 
-                    </div> <!-- end swiper -->
+                        </div> <!-- end swiper -->
 
-                </div> <!-- end container -->
+                    </div> <!-- end container -->
 
-            </section>
+                </section>
 
             <div>
 
