--- a/nos.html
+++ b/nos.html
@@ -83,38 +83,38 @@
                 <p>Sinta-se em casa na Rabi Semijoias, onde a elegância encontra sua verdadeira expressão e a qualidade brilha em cada detalhe.
                 </p>
 
-                <p>Com carinho e compromisso, Equipe Rabi Semijoias!</p>
+                <p>Com carinho e compromisso, Equipe Rabi Semijoias!</p>
 
             </div>
             <div class="fotos">
 
                 <div class="cards">
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_3.jpg" alt="Loja rabi">
+                        <img src="./assets/loja/loja3.webp" alt="Loja rabi">
                     </div>
 
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_4.webp" alt="Loja rabi">
+                        <img src="./assets/loja/loja4.webp" alt="Loja rabi">
                     </div>
                 </div>
                 
                 <div class="cards">
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_1.jpg" alt="Loja rabi">
+                        <img src="./assets/loja/loja1.webp" alt="Loja rabi">
                     </div>
 
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_2.jpg" alt="Loja rabi">
+                        <img src="./assets/loja/loja2.webp" alt="Loja rabi">
                     </div>
                 </div>
 
                 <div class="cards">
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_3.jpg" alt="Loja rabi">
+                        <img src="./assets/loja/loja3.webp" alt="Loja rabi">
                     </div>
 
                     <div class="foto_loja">
-                        <img src="./assets/loja/loja_4.webp" alt="Loja rabi">
+                        <img src="./assets/loja/loja4.webp" alt="Loja rabi">
                     </div>
                 </div>
                 
