--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="logo">
 
-                <img src="./assets/logo/logo.png" alt="Logo Rabi SemiJoias">
+                <a href="index.html"><img src="./assets/logo/logo.png" alt="Logo Rabi SemiJoias"></a>
 
             </div>
             
@@ -29,7 +29,7 @@
 
                 <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
 
-                <li class="nav-item"><a href="./cadastro/cadastro.html" target="_blank" class="nav-link">SEJA UMA REVENDEDORA</a></li>
+                <li class="nav-item"><a href="cadastro.html" target="_blank" class="nav-link">SEJA UMA REVENDEDORA</a></li>
 
                 <li class="nav-item"><a href="./produtos.html" class="nav-link">PRODUTOS</a></li>
 
@@ -71,7 +71,7 @@
 
             <div>
 
-                <a href="./cadastro/cadastro.html" target="_blank"><button class="button-cta">QUERO SER UMA REVENDEDORA RABI DE SUCESSO!</button></a>
+                <!-- <a href="./cadastro/cadastro.html" target="_blank"><button class="button-cta">QUERO SER UMA REVENDEDORA RABI DE SUCESSO!</button></a> -->
 
             </div>
     
@@ -274,7 +274,7 @@
 
             <div>
 
-                <a href="./cadastro/cadastro.html" target="_blank"><button class="button-cta">QUERO SER UMA REVENDEDORA RABI DE SUCESSO!</button></a>
+                <!-- <a href="./cadastro/cadastro.html" target="_blank"><button class="button-cta">QUERO SER UMA REVENDEDORA RABI DE SUCESSO!</button></a> -->
 
             </div>
 
@@ -722,7 +722,8 @@
 
         <div class="desenvolvido">
 
-            <p>Desenvolvido por <a href="https://wa.me/5533999726037">HL7 Studio</a></p>
+            <p>Desenvolvido por Heitor Sampaio Lima</p>
+            <img src="./assets/logo/logoucb.png">
 
         </div>
 
