--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -16,7 +16,7 @@
 
             <img src="../assets/logo/logo.png" alt="Logo Rabi Semi Joias">
 
-            <h1>Cadastro de <span>Revendedora</span></h1>
+            <h1>Cadastro de <span>Cliente</span></h1>
 
         </div>
 
@@ -26,18 +26,18 @@
 
             <p>Nome Completo:</p>
             <input type="text" name="nome" required>
+            
+            <p>CPF/CNPJ:</p>
+            <input type="text" name="cpf" required>
 
             <p>Data de Nascimento:</p>
             <input type="text" name="data_nascimento" required>
-
-            <p>CPF:</p>
-            <input type="text" name="cpf" placeholder="000.000.000-00" required>
 
             <p>E-mail:</p>
             <input type="email" name="email" required>
 
             <p>WhatsApp:</p>
-            <input type="text" name="whatsapp" placeholder="(99) 99999-9999" required>
+            <input type="text" name="whatsapp" required>
 
             <p>Você tem restrições no nome? (SPC/SERASA/Protesto)</p>
 
@@ -111,7 +111,7 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
 
