--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
 
             <div class="logo">
 
-                <img src="./assets/logo/logo.png" alt="Logo Rabi SemiJoias">
+                <a href="index.html"><img src="./assets/logo/logo.png" alt="Logo Rabi SemiJoias"></a>
 
             </div>
             
@@ -28,7 +28,7 @@
 
                 <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
 
-                <li class="nav-item"><a href="./cadastro/cadastro.html" target="_blank" class="nav-link">SEJA UMA REVENDEDORA</a></li>
+                <li class="nav-item"><a href="cadastro.html" target="_blank" class="nav-link">SEJA UMA REVENDEDORA</a></li>
 
                 <li class="nav-item"><a href="./produtos.html" class="nav-link">PRODUTOS</a></li>
 
@@ -177,7 +177,8 @@
 
         <div class="desenvolvido">
 
-            <p>Desenvolvido por <a href="https://wa.me/5533999726037">HL7 Studio</a></p>
+            <p>Desenvolvido por Heitor Sampaio Lima</p>
+            <img src="./assets/logo/logoucb.png">
 
         </div>
 
