--- a/nos.html
+++ b/nos.html
@@ -28,7 +28,7 @@
 
                 <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
 
-                <li class="nav-item"><a href="cadastro.html" target="_blank" class="nav-link">SEJA UMA REVENDEDORA</a></li>
+                <li class="nav-item"><a href="cadastro.html" class="nav-link">SEJA UMA REVENDEDORA</a></li>
 
                 <li class="nav-item"><a href="./produtos.html" class="nav-link">PRODUTOS</a></li>
 
